# Obstacle-Avoidance-Path-Planning-and-Trajectory-Control-for-Differential-Drive-Robots

src/path_planner_update1/: package.xml  setup.cfg  setup.py
src/path_planner_update1/launch/: full_system.launch.py
src/path_planner_update1/path_planner_update1/: controller.py  follower_node.py  path_smoothing.py  trajectory_generator.py  visualizer_node.py
src/path_planner_update1/path_planner_update1/tests/: test_controller_logic.py  test_path_and_trajectory.py  test_system_metrics.py
src/path_planning_assignment/: .gitignore  Command_refrence_Guide.md  Detailed_documentation.md  README.md  package.xml  setup.cfg  setup.py
src/path_planning_assignment/path_planning_assignment/: controller.py  follower_node.py  path_smoothing.py  trajectory_generator.py  visualizer.py
src/path_planning_assignment/path_planning_assignment/launch/: full_system.launch.py
src/path_planning_assignment/path_planning_assignment/rviz/: path_planner_config.rviz  path_visualizer_config.rviz
src/path_planning_assignment/test/: test_controller.py  test_integration.py  test_trajectory_generator.py
