cat << 'EOF' > package.xml
<?xml version="1.0"?>
<package format="3">
  <name>path_planner_update1</name>
  <version>0.0.1</version>
  <description>Advanced Path Smoothing and Trajectory Tracking Controller for TurtleBot3 in ROS2 Humble</description>
  <maintainer email="you@example.com">robotics_user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf_transformations</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
EOF
